<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        />


    <!-- 画像がすでに設定されている場合は表記を変えるなど対応が必要 -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="画像の取得"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPlanName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_planName" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0A000000"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/column_startTime" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0A000000"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorAccent"
                    android:text="@string/column_endTime" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:background="@color/mtrl_textinput_filled_box_default_background_color"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/viewStartDay"
                    android:textSize="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showDatePickerDialog"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1.5">

                <TextView
                    android:id="@+id/textPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/period"
                    android:textSize="25sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:background="@color/mtrl_textinput_filled_box_default_background_color"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/viewEndDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:onClick="showDatePickerDialog"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/column_person" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_memo" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <!-- 下部の保存・削除ボタン -->

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:onClick="onClickSaveButton"
        />


</LinearLayout>